--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     // Override Spring boot versions
     ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with the latest assertj version
     ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with the latest flyway version
+    ext["h2.version"] = "1.4.193"  // Remove when spring boot has caught up with the latest h2 version
     ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with the latest hibernate version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest hsqldb version
     ext["jackson.version"] = "2.8.4" // Remove when spring boot has caught up with the latest jackson version
@@ -10,7 +11,7 @@ buildscript {
     ext {
         jacocoVersion = "0.7.7.201606060606"
         springBootVersion = "1.4.1.RELEASE"
-        springCloudVersion = "Camden.SR1"
+        springCloudVersion = "Camden.SR2"
     }
 
     repositories {
