--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,13 @@ buildscript {
     // Override Spring boot versions
     ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with the latest assertj version
     ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with the latest flyway version
-    ext["h2.version"] = "1.4.193"  // Remove when spring boot has caught up with the latest h2 version
     ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with the latest hibernate version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest hsqldb version
-    ext["jackson.version"] = "2.8.4" // Remove when spring boot has caught up with the latest jackson version
     ext["mysql.version"] = "6.0.5"  // Remove when spring boot has caught up with the latest mysql version
 
     ext {
         jacocoVersion = "0.7.7.201606060606"
-        springBootVersion = "1.4.1.RELEASE"
+        springBootVersion = "1.4.2.RELEASE"
         springCloudVersion = "Camden.SR2"
     }
 
@@ -86,7 +84,7 @@ subprojects {
     apply from: "../coverage.gradle"
     apply plugin: "docker"
     apply plugin: "maven"
-    apply plugin: "spring-boot"
+    apply plugin: "org.springframework.boot"
 
     // Dependencies
     dependencyManagement {
@@ -104,9 +102,9 @@ subprojects {
             dependency("nl.jqno.equalsverifier:equalsverifier:2.1.6")
             dependency("org.awaitility:awaitility:2.0.0")
             dependency("org.jolokia:jolokia-core:1.3.5")
-            dependency("org.powermock:powermock-api-mockito:1.6.5")
-            dependency("org.powermock:powermock-core:1.6.5")
-            dependency("org.powermock:powermock-module-junit4:1.6.5")
+            dependency("org.powermock:powermock-api-mockito:1.6.6")
+            dependency("org.powermock:powermock-core:1.6.6")
+            dependency("org.powermock:powermock-module-junit4:1.6.6")
             dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.0.M1")
         }
     }
