--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with the latest flyway version
     ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with the latest hibernate version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest hsqldb version
+    ext["jackson.version"] = "2.8.5" // Remove when spring boot has caught up with the latest jackson version
     ext["mysql.version"] = "6.0.5"  // Remove when spring boot has caught up with the latest mysql version
 
     ext {
@@ -36,7 +37,7 @@ buildscript {
 
 plugins {
     id "com.github.ben-manes.versions" version "0.13.0"
-    id "org.sonarqube" version "2.2"
+    id "org.sonarqube" version "2.2.1"
 }
 
 allprojects {
