--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
     ext {
         jacocoVersion = "0.7.9"
         springBootVersion = "1.5.3.RELEASE"
-        springCloudVersion = "Dalston.RELEASE"
+        springCloudVersion = "Dalston.SR1"
     }
 
     // Changing modules are cached by default for 24 hours, change the default to never and mark snapshots as changing
