--- a/thule-cloud/src/itest/docker/docker-compose.yml
+++ b/thule-cloud/src/itest/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   ################################  thule-admin-server  ################################
-  thule-admin-server:
+  thule-cloud-admin-server:
     image: pooh.serin-consultancy.co.uk/thule-admin-server
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service-host
@@ -12,8 +12,8 @@ services:
       - zipkin-host:172.17.0.1
     hostname: admin-server-1
     links:
-      - thule-config-service:thule-config-service-host
-      - thule-discovery-service:thule-discovery-service-host
+      - thule-cloud-config-service:thule-config-service-host
+      - thule-cloud-discovery-service:thule-discovery-service-host
     ports:
       - "9071:8071"
     volumes:
@@ -22,7 +22,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-config-service  ################################
-  thule-config-service:
+  thule-cloud-config-service:
     image: pooh.serin-consultancy.co.uk/thule-config-service
     environment:
       THULE_DISCOVERY_SERVICE_HOST: docker-host
@@ -40,7 +40,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-discovery-service  ################################
-  thule-discovery-service:
+  thule-cloud-discovery-service:
     image: pooh.serin-consultancy.co.uk/thule-discovery-service
     environment:
       THULE_CONFIG_SERVICE_HOST: docker-host
@@ -58,7 +58,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-edge-server  ################################
-  thule-edge-server:
+  thule-cloud-edge-server:
     image: pooh.serin-consultancy.co.uk/thule-edge-server
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service-host
@@ -69,8 +69,8 @@ services:
       - zipkin-host:172.17.0.1
     hostname: edge-server-1
     links:
-      - thule-config-service:thule-config-service-host
-      - thule-discovery-service:thule-discovery-service-host
+      - thule-cloud-config-service:thule-config-service-host
+      - thule-cloud-discovery-service:thule-discovery-service-host
     ports:
       - "9080:8080"
     volumes:
@@ -79,7 +79,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-email-server  ################################
-  thule-email-service:
+  thule-cloud-email-service:
     image: pooh.serin-consultancy.co.uk/thule-email-service
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service-host
@@ -90,8 +90,8 @@ services:
       - zipkin-host:172.17.0.1
     hostname: email-server-1
     links:
-      - thule-config-service:thule-config-service-host
-      - thule-discovery-service:thule-discovery-service-host
+      - thule-cloud-config-service:thule-config-service-host
+      - thule-cloud-discovery-service:thule-discovery-service-host
     ports:
       - "9091:8091"
     volumes:
@@ -100,7 +100,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
 
   ################################  thule-people-service  ################################
-  thule-people-service:
+  thule-cloud-people-service:
     image: pooh.serin-consultancy.co.uk/thule-people-service
     environment:
       THULE_CONFIG_SERVICE_HOST: thule-config-service-host
@@ -111,8 +111,8 @@ services:
       - zipkin-host:172.17.0.1
     hostname: people-service-1
     links:
-      - thule-config-service:thule-config-service-host
-      - thule-discovery-service:thule-discovery-service-host
+      - thule-cloud-config-service:thule-config-service-host
+      - thule-cloud-discovery-service:thule-discovery-service-host
     ports:
       - "9090:8090"
     volumes:
