--- a/thule-config-service/build.gradle
+++ b/thule-config-service/build.gradle
@@ -23,7 +23,7 @@ plugins {
     id "java"
     id "maven-publish"
     id "org.sonarqube" version "2.6.1"
-    id "org.springframework.boot" version "2.0.0.M7"
+    id "org.springframework.boot" version "2.0.0.RC1"
 }
 apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
