--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 plugins {
     id "com.github.ben-manes.versions" version "0.17.0"
     id "org.sonarqube" version "2.6.1"
-    id "org.springframework.boot" version "2.0.0.M7" apply(false)
+    id "org.springframework.boot" version "2.0.0.RC1" apply(false)
 }
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 apply from: "${rootDir}/../gradle/plugin-sonarqube-config.gradle"
