--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 plugins {
     id "com.github.ben-manes.versions" version "0.17.0"
     id "org.sonarqube" version "2.6.2" apply(false)
-    id "org.springframework.boot" version "2.0.0.RELEASE" apply(false)
+    id "org.springframework.boot" version "2.0.0.RC2" apply(false)
 }
 
 subprojects {
@@ -47,7 +47,7 @@ project("thule-spring-boot-starter-test") {
         compile("nl.jqno.equalsverifier:equalsverifier:2.4.3")
         compile("org.awaitility:awaitility:3.0.0")
         compile("org.springframework.boot:spring-boot-starter-test")
-        compile("org.springframework.cloud:spring-cloud-contract-wiremock:2.0.0.RELEASE")
+        compile("org.springframework.cloud:spring-cloud-contract-wiremock:2.0.0.M7")
         compile("pl.pojo:pojo-tester:0.7.6")
     }
 }
