--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -23,7 +23,7 @@ plugins {
     id "java"
     id "maven-publish"
     id "org.sonarqube" version "2.6.2"
-    id "org.springframework.boot" version "2.0.0.RC2"
+    id "org.springframework.boot" version "2.0.0.RELEASE"
 }
 apply plugin: "io.spring.dependency-management"
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
@@ -38,7 +38,7 @@ apply from: "${rootDir}/../gradle/plugin-spring-boot-config.gradle"
 
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M7")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M8")
     }
 }
 
